fixed flickering bug

--- a/src/styles/HireLink.css
+++ b/src/styles/HireLink.css
@@ -11,9 +11,10 @@
     color: #fff;
     font-size: 1rem;
     cursor: pointer;
-}
-.hire__link a{
     text-decoration: none;
+
+}
+.hire__link p{
     color: white;
     font-size: 1.5rem;
     font-weight: 400;
